Cambio de nombres urls

--- a/WebDjango/core/templates/padre.html
+++ b/WebDjango/core/templates/padre.html
@@ -25,9 +25,9 @@
             <div class="container">
                 <a class="navbar-brand1" href="#!">Inicio</a>
                 <a class="navbar-brand" href="{% url 'Blog' %}">Blog</a>
-                <a class="navbar-brand" href="{% url 'Registro' %}">Registro</a>
-                <a class="navbar-brand" href="{% url 'Sobre' %}">Sobre</a>
-                <a class="navbar-brand" href="{% url 'Contacto' %}">Contacto</a>
+                <a class="navbar-brand" href="{% url 'Páginas' %}">Páginas</a>
+                <a class="navbar-brand" href="{% url 'Acerca de mi' %}">Acerca de mi</a>
+                <a class="navbar-brand" href="{% url 'Registrarme' %}">Registrarme</a>
                 <a class="btn btn-primary" href="#signup">Iniciar</a>
             </div>
         </nav>
