Solo un cambio de prueba.

--- a/WebDjango/core/templates/inicio.html
+++ b/WebDjango/core/templates/inicio.html
@@ -6,6 +6,6 @@
         
 <h1>Vista de Inicio</h1>
 
-<h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam expedita perferendis atque sequi asperiores, illo ducimus, labore libero similique eaque voluptates error esse ad itaque qui rem. Doloremque, iste aliquid.</h4>
+<h4>Hola Soy Gino. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam expedita perferendis atque sequi asperiores, illo ducimus, labore libero similique eaque voluptates error esse ad itaque qui rem. Doloremque, iste aliquid.</h4>
 
 {% endblock contenidoQueCambia %}
