--- a/WebDjango/core/templates/inicio.html
+++ b/WebDjango/core/templates/inicio.html
@@ -6,6 +6,6 @@
         
 <h1>Vista de Inicio</h1>
 
-<h4>Hola Soy Yessica. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam expedita perferendis atque sequi asperiores, illo ducimus, labore libero similique eaque voluptates error esse ad itaque qui rem. Doloremque, iste aliquid.</h4>
+<h4>Hola Soy Yessica. Este es mi primer commit en mi rama :D.</h4>
 
 {% endblock contenidoQueCambia %}
