--- a/WebDjango/core/templates/padre.html
+++ b/WebDjango/core/templates/padre.html
@@ -24,10 +24,10 @@
         <nav id="asdas" class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand1" href="#!">Inicio</a>
-                <a class="navbar-brand" href="{% url 'Blog' %}">Blog</a>
-                <a class="navbar-brand" href="{% url 'Páginas' %}">Páginas</a>
-                <a class="navbar-brand" href="{% url 'Acerca de mi' %}">Acerca de mi</a>
-                <a class="navbar-brand" href="{% url 'Registrarme' %}">Registrarme</a>
+                <a class="navbar-brand" href="{% url 'blog' %}">Blog</a>
+                <a class="navbar-brand" href="{% url 'paginas' %}">Páginas</a>
+                <a class="navbar-brand" href="{% url 'acerca de mi' %}">Acerca de mi</a>
+                <a class="navbar-brand" href="{% url 'registrarme' %}">Registrarme</a>
                 <a class="btn btn-primary" href="#signup">Iniciar</a>
             </div>
         </nav>
@@ -57,7 +57,7 @@
                         <ul class="list-inline mb-2">
                             <li class="list-inline-item"><a href="#!">About</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Contact</a></li>
+                            <li class="list-inline-item"><a href="#!">Contacto</a></li>
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="#!">Terms of Use</a></li>
                             <li class="list-inline-item">⋅</li>
