Se realiza herencia de templates en solapas principales de web

--- a/WebDjango/core/templates/inicio.html
+++ b/WebDjango/core/templates/inicio.html
@@ -1,11 +1,25 @@
 {% extends 'padre.html' %}
 
+
 {% load static %}
+
 
 {% block contenidoQueCambia %}
         
-<h1>Vista de Inicio</h1>
+</nav>
+<!-- Masthead-->
+<header class="masthead">
+    <div class="container position-relative">
+        <div class="row justify-content-center">
+            <div class="col-xl-6">
+                <div class="text-center text-white">
+                    <!-- Page heading-->
+                    <h1 class="mb-5">Nuestra web intermedia de Django</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
-<h4>Hola Soy Yessica. Este es mi primer commit en mi rama :D.</h4>
 
 {% endblock contenidoQueCambia %}
