--- a/WebDjango/core/templates/padre.html
+++ b/WebDjango/core/templates/padre.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Pagina de Inicio</title>
+        <title></title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -28,22 +28,11 @@
                 <a class="navbar-brand" href="{% url 'paginas' %}">Páginas</a>
                 <a class="navbar-brand" href="{% url 'acerca de mi' %}">Acerca de mi</a>
                 <a class="navbar-brand" href="{% url 'registrarme' %}">Registrarme</a>
-                <a class="btn btn-primary" href="#signup">Iniciar</a>
+                <a class="btn btn-primary" href="{% url 'login' %}"">Iniciar</a>
             </div>
-        </nav>
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container position-relative">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6">
-                        <div class="text-center text-white">
-                            <!-- Page heading-->
-                            <h1 class="mb-5">Nuestra web intermedia de Django</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
+
+            
+
         
         {% block contenidoQueCambia %}
         
