Modificación de modelo
Cambios en vistas de los proyectos, se modifico el modelo

--- a/WebDjango/core/templates/inicio.html
+++ b/WebDjango/core/templates/inicio.html
@@ -1,11 +1,11 @@
-{% extends 'padre.html' %}
+{% extends 'nav-footer.html' %}
 
 {% load static %}
 
-{% block contenidoQueCambia %}
+{% block content %}
         
-<h1>Vista de Inicio</h1>
+<h1>Inicio</h1>
 
-<h4>Hola Soy Yessica. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam expedita perferendis atque sequi asperiores, illo ducimus, labore libero similique eaque voluptates error esse ad itaque qui rem. Doloremque, iste aliquid.</h4>
+<h4>Hola este es nuestro blog</h4>
 
-{% endblock contenidoQueCambia %}
+{% endblock %}
