--- a/WebDjango/core/templates/nav-footer.html
+++ b/WebDjango/core/templates/nav-footer.html
@@ -45,8 +45,29 @@
                     </li>
                 
                 </ul>
+
+                <div class="my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </div>
             </div>
         </nav>
+
+        <header class="main-head">
+            <nav class="main">
+                <h1 id="logo">Hola</h1>
+                <ul>
+                    {% if request.user.is_authenticated %}
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    {% endif %}
+                    
+                    
+                </ul>
+            </nav>
+        </header>
 
         
         
