--- a/WebDjango/core/templates/nav-footer.html
+++ b/WebDjango/core/templates/nav-footer.html
@@ -38,6 +38,9 @@
                     <a class="nav-link" href="{% url 'Acerca de mi' %}">Acerca</a>
                     </li>
                 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'post' %}">Post</a>
+                    </li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-nav ml-auto">
@@ -53,12 +56,28 @@
             </div>
         </nav>
 
+        <div class="main">
+		
+            <nav class="second-nav">
+                <a class="home" href="{% url 'home' %}">Inicio</a>
+                {% if request.user.is_authenticated %}
+                <a class="profile" href="{% url 'profile' %}">Mi Perfil</a>
+                <a class="new" href="{% url 'post' %}">Crear nuevo post</a>
+
+
+                {% endif %}
+            </nav>
+    
+    
+            {% block content %}
+    
+            {% endblock %}
+    
+    
+    
+        </div>
 
         
-        
-        {% block content %}
-        
-        {% endblock %}
             
         <!-- Footer-->
         <footer class="footer mt-3">
