--- a/WebDjango/core/templates/nav-footer.html
+++ b/WebDjango/core/templates/nav-footer.html
@@ -21,6 +21,9 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
+        <script src="https://kit.fontawesome.com/49ce9d820e.js" crossorigin="anonymous"></script>
+
+
     </head>
     <body>
 
@@ -32,15 +35,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Inicio<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'home' %}">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="{% url 'Acerca de mi' %}">Acerca</a>
-                    </li>
-                
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'post' %}">Post</a>
-                    </li>
+                    {% if request.user.is_authenticated %}
+
+                        <li class="nav-item">
+                            <a class="profile nav-link" href="{% url 'profile' %}">Mi Perfil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="new nav-link" href="{% url 'post' %}">Nueva Publicación</a>
+                        </li>
+        
+                    {% endif %}
                 </ul>
 
                 <ul class="nav navbar-nav navbar-nav ml-auto">
@@ -56,50 +62,33 @@
             </div>
         </nav>
 
-        <div class="main">
-		
-            <nav class="second-nav">
-                <a class="home" href="{% url 'home' %}">Inicio</a>
-                {% if request.user.is_authenticated %}
-                <a class="profile" href="{% url 'profile' %}">Mi Perfil</a>
-                <a class="new" href="{% url 'post' %}">Crear nuevo post</a>
 
-
-                {% endif %}
-            </nav>
     
+        {% block content %}
     
-            {% block content %}
-    
-            {% endblock %}
-    
-    
-    
-        </div>
-
+        {% endblock %}
         
-            
-        <!-- Footer-->
-        <footer class="footer mt-3">
+
+        <footer class="col-12">
             <div class="container">
+                <hr>
                 <div class="row">
-                    
-                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
-                            </li>
-                        </ul>
+                    <div class="col-10">
+                        <a href="{% url 'home' %}" class="navbar-brand"><i class="fa-solid fa-house fa-sm"></i></a>
+                        © 2022 CoderHouse Roser-Frigoni-Morales
                     </div>
+                    <div class="col-1 pt-2">
+                        <i class="fa-brands fa-facebook fa-lg"></i>
+                    </div>
+                    <div class="col-1 pt-2">
+                        <i class="fa-brands fa-instagram fa-lg"></i>
+                    </div>
+                    
                 </div>
+                
             </div>
         </footer>
+            
 
         
         <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
