--- a/WebDjango/core/templates/nav-footer.html
+++ b/WebDjango/core/templates/nav-footer.html
@@ -23,6 +23,9 @@
 
         <script src="https://kit.fontawesome.com/49ce9d820e.js" crossorigin="anonymous"></script>
 
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+
+
 
     </head>
     <body>
@@ -52,10 +55,10 @@
                 <ul class="nav navbar-nav navbar-nav ml-auto">
 
                     {% if request.user.is_authenticated %}
-                        <li  class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                        <li  class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Salir</a></li>
                         {% else %}
-                        <li  class="nav-item"><a  class="nav-link" href="{% url 'register' %}">Register</a></li>
-                        <li  class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                        <li  class="nav-item"><a  class="nav-link" href="{% url 'register' %}">Registro</a></li>
+                        <li  class="nav-item"><a class="nav-link" href="{% url 'login' %}">Inicio sesión</a></li>
                     {% endif %}
         
                 </ul>
