--- a/WebDjango/core/templates/profile.html
+++ b/WebDjango/core/templates/profile.html
@@ -1,10 +1,16 @@
 {% extends 'nav-footer.html' %}
 {% block content %}
 
-<!-- Profile -->
-<div class="profile">
-	<img src="{{ user.profile.image.url }}">
-	<h2>@{{ user.username }}</h2>
-</div>
+<div class="container">
+    <h3>Usuario</h3>
+    <div class="mx-auto mt-3" style="width: 200px;">
+        <div class="card" style="width: 18rem;">
+            <img src="{{ user.profile.image.url }}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">@{{ user.username }}</p>
+            </div>
+        </div>
 
+    </div>
+</div>
 {% endblock %}
