--- a/WebDjango/core/templates/publicacion/crearpublicacion.html
+++ b/WebDjango/core/templates/publicacion/crearpublicacion.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
-        
+{% extends '../cmorales/nav-footer.html' %}
+
+{% block content %}
+<h1>Crear Publicación</h1>
+<hr>  
     <form action="{% url 'crearpublicacion' %}" method="POST">{% csrf_token %}
 
         {{miFormulario.as_p}}
@@ -17,6 +11,4 @@
 
     </form>
 
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+{% endblock %}
