--- a/WebDjango/core/templates/publicacion/listarpublicacion.html
+++ b/WebDjango/core/templates/publicacion/listarpublicacion.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
+{% extends '../cmorales/nav-footer.html' %}
+
+{% block content %}
 
     <h1>Lista de publicaciones</h1>
-
-
+<hr>
+        <ul>
+            <li><a href="{% url 'crearpublicacion' %}">Crear Publicación</a></li>
+        </ul>
     <ul>
-        
+ <hr>       
         {% for publicacion in publicaciones %}
             <li>
                 {{publicacion}}
@@ -30,6 +25,4 @@
             
     </ul>
 
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+{% endblock %}
