--- a/WebDjango/core/templates/categoria/crearcategoria.html
+++ b/WebDjango/core/templates/categoria/crearcategoria.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
-        
+{% extends '../cmorales/nav-footer.html' %}
+
+{% block content %}
+
+<h1>Crear Categoria</h1>
+<hr>
     <form action="{% url 'crearcategoria' %}" method="POST">{% csrf_token %}
 
         {{form.as_p}}
@@ -17,6 +12,5 @@
 
     </form>
 
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+
+{% endblock %}
