--- a/WebDjango/core/templates/categoria/detallecategoria.html
+++ b/WebDjango/core/templates/categoria/detallecategoria.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
+{% extends '../cmorales/nav-footer.html' %}
 
-    <h1>Vista en detalle</h1>
+{% block content %}
 
+
+    <h1>Detalle categoria</h1>
+    <hr>
 
     <h3>{{categoria.nombre}}</h3>
     <p>{{categoria.descripcion}}</p>
 
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+
+    {% endblock %}
