--- a/WebDjango/core/templates/categoria/eliminarcategoria.html
+++ b/WebDjango/core/templates/categoria/eliminarcategoria.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
-        
+{% extends '../cmorales/nav-footer.html' %}
+
+{% block content %}
+<h1>Eliminar Categoria</h1>
+<hr>        
     <form method="POST">{% csrf_token %}
 
         <p>Está seguro que desea eliminar el registro?</p>
@@ -17,7 +11,4 @@
         <button><a href="{% url 'listarcategoria' %}">Cancelar</a></button>
 
     </form>
-
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+    {% endblock %}
