--- a/WebDjango/core/templates/categoria/listarcategoria.html
+++ b/WebDjango/core/templates/categoria/listarcategoria.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
+{% extends '../cmorales/nav-footer.html' %}
+
+{% block content %}
 
     <h1>Lista de categorias</h1>
-
+    <hr>
+    <ul>
+        <li><a href="{% url 'crearcategoria' %}">Crear categorias</a></li>
+    </ul>
+<hr>
     <ul>
         
         {% for categoria in categorias %}
@@ -31,6 +28,4 @@
             
     </ul>
 
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+    {% endblock %}
