--- a/WebDjango/core/templates/cmorales/nav-footer.html
+++ b/WebDjango/core/templates/cmorales/nav-footer.html
@@ -45,10 +45,20 @@
                         <li class="nav-item">
                             <a class="profile nav-link" href="{% url 'profile' %}">Mi Perfil</a>
                         </li>
+                        <!--
                         <li class="nav-item">
                             <a class="new nav-link" href="{% url 'post' %}">Nueva Publicación</a>
                         </li>
-        
+                        -->
+                        <li class="nav-item">
+                            <a class="new nav-link" href="{% url 'listarcategoria' %}">Categorias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="new nav-link" href="{% url 'listarpublicacion' %}">Publicaciones</a>
+                        </li>        
+                        <li class="nav-item">
+                            <a class="new nav-link" href="{% url 'listarcomentario' %}">Comentarios</a>
+                        </li>
                     {% endif %}
                 </ul>
 
