--- a/WebDjango/core/templates/comentario/detallecomentario.html
+++ b/WebDjango/core/templates/comentario/detallecomentario.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>detalle comentario</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
-        
-    <form action="{% url 'detallecomentario' %}" method="POST">{% csrf_token %}
+{% extends '../cmorales/nav-footer.html' %}
 
-        {{form.as_p}}
+{% block content %}
 
-        <input type="submit" value="Enviar"/>
 
-    </form>
+    <h1>Detalle comentario</h1>
+    <hr>
 
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+    <h3>{{comentario.users}}</h3>
+    <p>{{comentario.ingreso_comentario}}</p>
+
+
+    {% endblock %}
