--- a/WebDjango/core/templates/comentario/editarcomentario.html
+++ b/WebDjango/core/templates/comentario/editarcomentario.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>editar comentario</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
-        
-    <form action="{% url 'editarcomentario' %}" method="POST">{% csrf_token %}
+{% extends '../cmorales/nav-footer.html' %}
+
+{% block content %}
+<h1>Editar Comentario</h1>
+<hr>    
+    <form  method="POST">{% csrf_token %}
 
         {{form.as_p}}
 
@@ -17,6 +11,5 @@
 
     </form>
 
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+
+    {% endblock %}
