--- a/WebDjango/core/templates/comentario/eliminarcomentario.html
+++ b/WebDjango/core/templates/comentario/eliminarcomentario.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eliminar comentario</title>
-</head>
-<body>
-    {% block contenidoQueCambia %}
-        
-    <form action="{% url 'eliminarcomentario' %}" method="POST">{% csrf_token %}
+{% extends '../cmorales/nav-footer.html' %}
 
-        {{form.as_p}}
+{% block content %}
+<h1>Eliminar Comentario</h1>
+<hr>        
+    <form method="POST">{% csrf_token %}
 
-        <input type="submit" value="Eliminar"/>
+        <p>Está seguro que desea eliminar el registro?</p>
+
+        <button type="submit">Confirmar</button>
+        <button><a href="{% url 'listarcomentario' %}">Cancelar</a></button>
 
     </form>
-
-{% endblock contenidoQueCambia %}
-</body>
-</html>
+    {% endblock %}
