--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,20 +1,64 @@
-{% extends 'blog/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        {% load static %}
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Login - SB Admin</title>
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    </head>
+    <body class="bg-primary">
+        <div id="layoutAuthentication">
+            <div id="layoutAuthentication_content">
+                <main>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-5">
+                                <div class="card shadow-lg border-0 rounded-lg mt-5">
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                                    <div class="card-body">
+                                        <!---->
+                                        {% if form.errors %}
+                                        <div class="card bg-warning text-white mb-4">
+                                            <div class="card-body"><i class="fa fa-warning"></i> Nombre de Usuario y/o Contraseña no validos.</div>
+                                        </div>
+                                        {% endif %}
+
+                                        <form method="POST" >
+                                        {% csrf_token %}
 
 
-{% block content %}
-  <div class="jumbotron">
+                                        <!---->
+                                            <div class="form-floating mb-3">
+                                                <input class="form-control" id="id_username" type="text" placeholder="username" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" required />
+                                                <label for="id_username">Username</label>
+                                            </div>
+                                            <div class="form-floating mb-3">
+                                                <input class="form-control" type="password" placeholder="Password" name="password" autocomplete="current-password" required id="id_password"/>
+                                                <label for="id_password">Password</label>
+                                            </div>
+                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                                                <input type="submit" class='btn btn-primary' value="Entrar" />
+                                            </div>
 
-    <h2>Please Login: </h2>
-    {% if form.errors %}
-        <p>Your username and password didn't match.Please try again!</p>
-    {% endif %}
-
-    <form method="POST" action="{% url 'login' %}">
-    {% csrf_token %}
-        {{form.as_p}}
-
-        <input type="submit" class='btn btn-primary' value="Login" />
-        <input type="hidden" name="next" value="{{ next }}" />
-    </form>
-  </div>
-{% endblock %}
+                                        </form>
+                                    </div>
+                                    <div class="card-footer text-center py-3">
+                                        <div class="small"><a href="/accounts/signup">Necesita una cuenta? Registrate!</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+            </div>
+            <br>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
+    </body>
+</html>
