Se crea view para editar perfil

--- a/templates/blog/post_draft_list.html
+++ b/templates/blog/post_draft_list.html
@@ -3,8 +3,8 @@
 {% block content %}
     {% for post in post_list %}
         <div class="post">
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }}</a></h1>
+            <p class="date">Creado el: {{ post.fecha_publicacion|date:'d-m-Y' }}</p>
             <p>{{ post.text|safe|linebreaksbr }}</p>
         </div>
     {% endfor %}
