--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -50,6 +50,9 @@
                     <a class="nav-link" href="{% url 'logout' %}">Log out</a>
                 </li>
                 <li class="navbar-nav d-flex flex-row me-1">
+                    <a class="nav-link" href="{% url 'edit_profile' %}">Editar perfil</a>
+                </li>
+                <li class="navbar-nav d-flex flex-row me-1">
                     <a class="nav-link">Welcome: {{ user.username }}</a>
                 </li>
             {% else %}
