--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -4,11 +4,12 @@
     <div class="centerstage">
         {% for post in  post_list %}
             <div class="post">
-                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }}</a></h1>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }} {{ post.image }}</a></h1>
                 <div class="date">
                     <p>Publicado el {{ post.fecha_publicacion|date:"D M Y" }}</p>
+                
                 </div>
-                <a href="{% url 'post_detail' pk=post.pk %}">Comentarios: {{ post.comentario_aprobado.count }}</a>
+                
             </div>
         {% endfor %}
     </div>
