--- a/templates/profiles/edit_profile.html
+++ b/templates/profiles/edit_profile.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-secondary">Guardar cambios</button>
-    
+        <img src="{{ post.imagen_portada.url }}"> <br/> <br/>
 
 
 {% endblock %}
