--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,19 +1,90 @@
-{% extends 'blog/base.html' %}
-
+{% extends 'registration/base_registration.html' %}
 
 {% block content %}
-  <div class="jumbotron">
+    <body class="bg-primary">
+        <div id="layoutAuthentication">
+            <div id="layoutAuthentication_content">
+                <main>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-7">
+                                <div class="card shadow-lg border-0 rounded-lg mt-5">
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Crear Cuenta</h3></div>
+                                    <div class="card-body">
+                                        <!-- Inicio Formulario -->    
+                                        {% if form.errors %}
+                                        <div class="card bg-warning text-white mb-4">
+                                            <div class="card-body"><i class="fa fa-warning"></i> Nombre de Usuario y/o Contraseña no validos.</div>
+                                        </div>
+                                        {% endif %}                                  
+                                        <form method="POST" action="{% url 'signup' %}">
+                                          {% csrf_token %}
+                                            <!--  -->  
+                                            <div class="row mb-3">
+                                              <div class="col-md-6">
+                                                  <div class="form-floating mb-3 mb-md-0">
+                                                      <input type="text" name="username" maxlength="150" autofocus required id="id_username" placeholder="Ingrese Usuario" class="form-control" required />
+                                                      <label for="inputFirstName">Usuario</label>
+                                                  </div>
+                                              </div>
+                                              <div class="col-md-6">
+                                                  <div class="form-floating">
+                                                    <input type="email" name="email" placeholder="Ingrese email" class="form-control" required id="id_email" placeholder="name@example.com" />
+                                                    <label for="inputEmail">Email</label>
+                                                  </div>
+                                              </div>
+                                            </div>
+                                            <!--  -->  
+                                            <div class="row mb-3">
+                                                <div class="col-md-6">
+                                                    <div class="form-floating mb-3 mb-md-0">
+                                                        <input type="text" name="first_name" placeholder="Ingrese Nombre" class="form-control" maxlength="100" required id="id_first_name" />
+                                                        <label for="inputFirstName">Nombre</label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <div class="form-floating">
+                                                        <input type="text" name="last_name" placeholder="Ingrese Apellido" class="form-control" maxlength="100" required id="id_last_name" />
+                                                        <label for="inputLastName">Apellido</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!--  -->  
+                                            <div class="row mb-3">
+                                                <div class="col-md-6">
+                                                    <div class="form-floating mb-3 mb-md-0">
+                                                      <input type="password" name="password1" autocomplete="new-password" required id="id_password1" class="form-control" placeholder="password" />
+                                                        <label for="inputPassword">Password</label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <div class="form-floating mb-3 mb-md-0">
+                                                      <input type="password" name="password2" autocomplete="new-password" required id="id_password2" class="form-control" placeholder="Confirme password" />
+                                                        <label for="inputPasswordConfirm">Confirmar Password</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!--  -->  
+                                            <div class="mt-4 mb-0">
+                                                <div class="d-grid">
+                                                  <input type="submit" class='btn btn-primary' value="Crear Cuenta" />
+                                                  <input type="hidden" name="next" value="" />
+                                                </div>
+                                            </div>
+                                            <!--  -->  
+                                        </form>
+                                    </div>
+                                    <div class="card-footer text-center py-3">
+                                        <div class="small"><a href="/accounts/login">Ya tiene una cuenta? Ingrese aquí</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+            </div>
+        </div>
 
-    <h2>Sign Up: </h2>
-    {% if form.errors %}
-        <p>Your username and password didn't match.Please try again!</p>
-    {% endif %}
-    <form method="POST" action="{% url 'signup' %}">
-    {% csrf_token %}
-        {{form.as_p}}
+    </body>
+    {% endblock %}
 
-        <input type="submit" class='btn btn-primary' value="Signup" />
-        <input type="hidden" name="next" value="{{ next }}" />
-    </form>
-  </div>
-{% endblock %}
