Carga de archivos estáticos - theme

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,41 +1,49 @@
 {% extends 'blog/base.html' %}
-
+{% load static %}
 
 {% block content %}
-        <h1 class='posttitle loader'>{{ post.titulo }}</h1>
-        {% if post.fecha_publicacion %}
-            <div class="date postdate">
-                {{ post.fecha_publicacion }}
+        <!-- Page Header-->
+        <header class="masthead" style="background-image: url('assets/img/about-bg.jpg')">
+            <div class="container position-relative px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="page-heading">
+                            <h1>Conociendo Argentina</h1>
+                            <span class="subheading"></span>
+                        </div>
+                    </div>
+                </div>
             </div>
-        {% else %}
-            <a class="btn btn-success" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
-        {% endif %}
-        <p class='postcontent'>{{ post.text|safe|linebreaksbr }}</p>
-        <img src=" {{ post.imagen_portada.url }}",  width="640" height="425"> <br/> <br/>  
-        {% if user.is_authenticated %}
-            <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}"><i class="bi bi-pen"></i></a>
-            <a class="btn btn-danger" href="{% url 'post_remove' pk=post.pk %}"><i class="bi bi-x"></i></a>
-        {% endif %}
+        </header>
+        <br/>  
         
-        <hr>
-        <a class="btn btn-primary btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
-        <div class="container">
-            {% for comment in post.comments.all %}
-                <br>
-                {% if user.is_authenticated or comment.approved_comment %}
-                    {{ comment.created_date }}
-                    {% if not comment.approved_comment %}
-                        <a class="btn btn-danger" href="{% url 'comment_remove' pk=comment.pk %}">
-                            <i class="bi bi-x"></i></a>
-                        <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk %}">
-                            <i class="bi bi-check2"></i></a>
-                    {% endif %}
-                    <p>{{ comment.text|safe|linebreaks }}</p>
-                    <p>Posted by: <strong>{{ comment.author }}</strong></p>
-                {% endif %}
-            {% empty %}
-                <p>No comments posted.</p>
-            {% endfor %}
-        </div>
+            <h1 class='posttitle loader'>{{ post.titulo }}</h1>
+            <small>Por:
+                {{ post.autor.username }}
+                {{ post.autor.date }}
 
-{% endblock %}
+            {% if post.fecha_publicacion %}
+                <div class="date postdate">
+                    {{ post.fecha_publicacion }}
+                </div>
+            {% else %}
+                <a class="btn btn-success" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+            {% endif %}
+            <br/> 
+            <img src=" {{ post.imagen_portada.url }}",  width="640" height="425"> <br/> <br/>  
+            <p class='postcontent'>{{ post.contenido|safe|linebreaksbr }}</p>
+            {% if user.is_authenticated %}
+                <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}"><i class="bi bi-pen"></i></a>     
+                    </p>
+                    
+                    </div>
+                </div>
+                </div>
+            </div>
+            {% endif %}
+
+        <br/><br/>
+        <img src="{{ post.autor.profile.profile_picture.url }}" class="rounded-circle", width="80" height="80">
+        <br/><br/>
+
+{% endblock content %}
