--- a/templates/profiles/edit_profile.html
+++ b/templates/profiles/edit_profile.html
@@ -1,15 +1,40 @@
 {% extends "blog/base.html" %}
 
-{% block title %}Editar Perfil{% endblock title %}
-    
 {% block content %}
 
-    <h1>Editar Perfil</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Guardar cambios</button>
-        <img src="{{ post.imagen_portada.url }}"> <br/> <br/>
 
+        {% if user.is_authenticated %}
+                    <!-- Page Header-->
+            <header class="masthead" style="background-image: url('assets/img/about-bg.jpg')">
+                <div class="container position-relative px-4 px-lg-5">
+                    <div class="row gx-4 gx-lg-5 justify-content-center">
+                        <div class="col-md-10 col-lg-8 col-xl-7">
+                            <div class="page-heading">
+                                <h1>Editar perfil</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        {% endif %}
+         
+        <h1>Editar Perfil</h1>
+        <br/>
 
-{% endblock %}
+        {{ user.profile.bio }}<br/><br/><br/>
+        
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            <button class="btn btn-secondary">Guardar cambios</button>
+            <img src="{{ post.imagen_portada.url }}"> <br/> <br/>
+    
+{% endblock content %}
