Se organizan páginas en navbar y se corrigen visualizaciones de contenido

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7426,7 +7426,7 @@ textarea.form-control-lg {
 /* rtl:end:remove */
 .text-primary {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+  color: rgba(var(b--bs-primary-rg), var(--bs-text-opacity)) !important;
 }
 
 .text-secondary {
