--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -31,7 +31,7 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'about' %}">Acerca de</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'post_list' %}">Sample Post</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'post_list' %}">Blog</a></li>
                         <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>-->
                     </ul>
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
@@ -39,11 +39,11 @@
                             <li class="nav-item">
                                 <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'post_new' %}">Nuevo artículo</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <!--<li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cuenta</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Editar perfil</a></li>
-                                </ul> 
+                                </ul> -->
                             </li> 
                             <li class="nav-item">
                                 <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'logout' %}">Log out</a></li>
