--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -5,13 +5,13 @@
 {% block content %}
     <!-- Page Header-->
   
-    <header class="masthead" style="background-image: url({% static 'assets/img/ruta-40.jpg' %})">
+    <header class="masthead" style="background-image: url({% static 'assets/img/puente.jpg' %})">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="page-heading">
                         <h1>Conociendo Argentina</h1>
-                        <span class="subheading"></span>
+                        <span class="subheading">Blog de viajes colaborativo</span>
                     </div>
                 </div>
             </div>
