--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11246,3 +11246,9 @@ header.masthead .site-heading .h1 {
     font-size: 2.25rem;
   }
 }
+
+/*Personalización*/
+
+.btn-outline-light {
+  padding: 4px 8px;
+}
