--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -20,6 +20,7 @@
     </head>
     <body>
         <!-- Navigation-->
+        
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'home' %}">Conociendo Argentina</a>
@@ -28,38 +29,43 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
+                    <ul class="navbar-nav ms-auto py-5 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'about' %}">Acerca de</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'post_list' %}">Blog</a></li>
                         <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>-->
                     </ul>
+                </div>
+
+                <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         {% if user.is_authenticated %}
                             <li class="nav-item">
                                 <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'post_new' %}">Nuevo artículo</a>
                             </li>
-                            <!--<li class="nav-item dropdown">
+                            <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cuenta</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Editar perfil</a></li>
-                                </ul> -->
+                                </ul> 
                             </li> 
+                            
                             <li class="nav-item">
                                 <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'logout' %}">Log out</a></li>
-                            <li class="nav-item">
+                            <!--<li class="nav-item">
                                 <a class="nav-link">Hola: {{ user.username }}</a>
-                            </li>    
+                            </li>-->
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'login' %}">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                                <a class="btn btn-outline-light" href="{% url 'signup' %}">Sign Up</a>
                             </li>
                         {% endif %}
                     </ul>
                 </div>
+                    
             </div>
         </nav>
 
